--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
    
         <h2 id="Desprenoi">Despre noi</h2>
 
-        <div class="text">
+        <div class="container text-center">
             <p>
                 La Energym, ne dedicăm să transformăm fiecare antrenament într-o experiență plăcută și motivațională,
                 oferindu-ți suportul necesar pentru a-ți atinge obiectivele de fitness și bunăstare. Indiferent dacă
@@ -332,7 +332,7 @@
         <h3>Abonamente</h3>
 
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <div class="card text-center mb-3" style="width: 18rem;">
+            <div class="card text-center mb-3" style="width: 18rem";>
                 <div class="card-body">
                     <h4 class="card-title">Abonament premium<span class="badge text-bg-secondary">New</span></h4>
                     <ul class="card-text">
@@ -347,7 +347,7 @@
                 </div>
             </div>
 
-            <div class="card text-center mb-3" style="width: 18rem;">
+            <div class="card text-center mb-3" style="width: 18rem";>
                 <div class="card-body">
                     <h4 class="card-title">Abonament pentru cupluri<span class="badge text-bg-secondary">New</span></h4>
                     <ul class="card-text">
@@ -361,7 +361,7 @@
                 </div>
             </div>
 
-            <div class="card text-center mb-3" style="width: 18rem;">
+            <div class="card text-center mb-3" style="width: 18rem";>
                 <div class="card-body">
                     <h4 class="card-title">Abonament lunar standard</h4>
                     <ul class="card-text">
@@ -374,7 +374,7 @@
                 </div>
             </div>
 
-            <div class="card text-center mb-3" style="width: 18rem;">
+            <div class="card text-center mb-3" style="width: 18rem";>
                 <div class="card-body">
                     <h4 class="card-title">Abonament pentru 3 luni</h4>
                     <ul class="card-text">
@@ -447,7 +447,7 @@
 
         <h2 id="Contact">Contact</h2>
 
-        <div class="text">
+        <div class="container text-center">
             <p>
                 La Energym, ne dedicăm să transformăm fiecare antrenament într-o experiență plăcută și motivațională,
                 oferindu-ți suportul necesar pentru a-ți atinge obiectivele de fitness și bunăstare. Indiferent dacă
