--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
             text-transform: uppercase;
             margin: 5rem;
             font-size: 400%;
-            text-align: center;
         }
 
         h2 {
@@ -261,7 +260,7 @@
             </div>
         </header>
 
-        <h1 id="Energym">Energym</h1>
+        <h1 id="Energym text-center">Energym</h1>
 
         <h2 id="Desprenoi">Despre noi</h2>
 
