--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             text-transform: uppercase;
             margin: 5rem;
             font-size: 400%;
+            text-align: center;
         }
 
         h2 {
@@ -150,13 +151,13 @@
 
 <body>
 
-    <div class="content">
+<div class="content">
 
         <header>
             <nav class="navbar navbar-expand-lg fixed-top">
                 <div class="container-fluid">
-                    <button class="navbar-toggler border border-white"" type=" button" data-bs-toggle="collapse"
-                        data-bs-target="#NavbarEnergym" aria-controls="navbarTogglerDemo03" aria-expanded="false"
+                    <button class="navbar-toggler border border-white" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#NavbarEnergym" aria-controls="#NavbarEnergym" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <img class="menu" src="poze_tema3/menu_bar.png"
                             alt="ilustrație simplă, cu contur galben, a unei haltere, element sugestiv pentru o sală de fitness">
@@ -260,7 +261,7 @@
             </div>
         </header>
 
-        <h1 id="Energym text-center">Energym</h1>
+        <h1 id="Energym">Energym</h1>
 
         <h2 id="Desprenoi">Despre noi</h2>
 
@@ -727,7 +728,6 @@
                 </div>
             </div>
         </div>
-    </div>
 
         <h2 id="Contact">Contact</h2>
 
@@ -751,7 +751,7 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                     <div class="card yellow">
-                        <p>Telefon/Whatsapp: <a href="tel: +40751535678">+40751535678</a></p>
+                        <p>Telefon/Whatsapp: <a href="tel:+40751535678">+40751535678</a></p>
                     </div>
                 </div>
 
@@ -797,7 +797,7 @@
                     <div class="d-flex">
                         <img class="icon" src="poze_tema3/telephone_icon.png"
                             alt="Reprezentare vizuală a unui receptor de telefon cu contur galben">
-                        <p>Telefon/Whatsapp: <a href="tel: +40751535678">+40751535678</a></p>
+                        <p>Telefon/Whatsapp: <a href="tel:+40751535678">+40751535678</a></p>
                     </div>
 
                     <div class="d-flex">
@@ -843,7 +843,7 @@
         </div>
 
     </footer>
-    </div>
+</div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
