--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-position: center;
             background-size: cover;
             background-attachment: fixed;
+            height: 100%;
             color: rgb(255, 255, 255);
 
         }
@@ -78,7 +79,6 @@
             text-transform: uppercase;
             margin: 5rem;
             font-size: 400%;
-            text-align: center;
         }
 
         h2 {
@@ -261,7 +261,7 @@
             </div>
         </header>
 
-        <h1 id="Energym">Energym</h1>
+        <h1 id="Energym" class="text-center">Energym</h1>
 
         <h2 id="Desprenoi">Despre noi</h2>
 
