--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
 
         h1 {
-            color: yellow;
+            color: rgb(255, 0, 157);
             font-weight: bold;
             text-transform: uppercase;
             margin: 5rem;
