am schimbat ceva la accordion

--- a/index.html
+++ b/index.html
@@ -570,7 +570,6 @@
                         <img src="poze_tema3/antrenament2.jpg" class="card-img-top"
                             alt="Două gantere albastre așezate pe o suprafață albă, și alte câteva echipamente pentru sală în fundal.">
                         <div class="card-body">
-
                             <h3 class="card-title">Fitness</h3>
 
                             <p>Fitnessul reprezintă un ansamblu de activități fizice menite să îmbunătățească
@@ -579,15 +578,16 @@
                                 condiția fizică generală.</p>
 
                             <div class="accordion accordion-flush" id="accordionFitnessBeneficii">
+
                                 <div class="accordion-item">
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#flush-fitnessbeneficii1"
-                                            aria-expanded="false" aria-controls="#flush-fitnessbeneficii1">
+                                            data-bs-toggle="collapse" data-bs-target="#fitnessbeneficii1"
+                                            aria-expanded="false" aria-controls="#fitnessbeneficii1">
                                             Beneficii fizice
                                         </button>
                                     </h4>
-                                    <div id="flush-fitnessbeneficii1" class="accordion-collapse collapse"
+                                    <div id="fitnessbeneficii1" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionFitnessBeneficii">
                                         <div class="accordion-body">
                                             <p>Practicarea regulată a exercițiilor fizice ajută la îmbunătățirea
@@ -611,12 +611,12 @@
                                 <div class="accordion-item">
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#flush-fitnessbeneficii2"
-                                            aria-expanded="false" aria-controls="#flush-fitnessbeneficii2">
+                                            data-bs-toggle="collapse" data-bs-target="#fitnessbeneficii2"
+                                            aria-expanded="false" aria-controls="#fitnessbeneficii2">
                                             Beneficii mentale
                                         </button>
                                     </h4>
-                                    <div id="flush-fitnessbeneficii2" class="accordion-collapse collapse"
+                                    <div id="fitnessbeneficii2" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionFitnessBeneficii">
                                         <div class="accordion-body">
                                             <p>Practicarea regulată a exercițiilor fizice ajută la reducerea
@@ -639,9 +639,10 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
 
+                            </div>
+
+                        </div>
                     </div>
                 </div>
 
@@ -660,13 +661,13 @@
                                 <div class="accordion-item">
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#flush-yogabeneficii1"
-                                            aria-expanded="false" aria-controls="flush-yogabeneficii1">
+                                            data-bs-toggle="collapse" data-bs-target="#yogabeneficii1"
+                                            aria-expanded="false" aria-controls="#yogabeneficii1">
                                             Beneficii fizice
                                         </button>
                                     </h4>
 
-                                    <div id="flush-yogabeneficii1" class="accordion-collapse collapse"
+                                    <div id="yogabeneficii1" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionYogaBeneficii">
                                         <div class="accordion-body">
                                             <p>Practicarea regulată a
@@ -691,12 +692,12 @@
                                 <div class="accordion-item">
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
-                                            data-bs-toggle="collapse" data-bs-target="#flush-yogabeneficii2"
-                                            aria-expanded="false" aria-controls="flush-yogabeneficii2">
+                                            data-bs-toggle="collapse" data-bs-target="#yogabeneficii2"
+                                            aria-expanded="false" aria-controls="#yogabeneficii2">
                                             Beneficii mentale
                                         </button>
                                     </h4>
-                                    <div id="flush-yogabeneficii2" class="accordion-collapse collapse"
+                                    <div id="yogabeneficii2" class="accordion-collapse collapse"
                                         data-bs-parent="#accordionYogaBeneficii">
                                         <div class="accordion-body">
                                             <p>Practicarea regulată
