altă încercare de a rezolva problema la accordion

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
 
         h1 {
-            color: rgb(255, 0, 157);
+            color: yellow;
             font-weight: bold;
             text-transform: uppercase;
             margin: 5rem;
@@ -566,6 +566,7 @@
 
             <div class="row g-4">
                 <div class="col col-lg-6 col-md-6 col-12">
+                    
                     <div class="card">
                         <img src="poze_tema3/antrenament2.jpg" class="card-img-top"
                             alt="Două gantere albastre așezate pe o suprafață albă, și alte câteva echipamente pentru sală în fundal.">
@@ -583,7 +584,7 @@
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#fitnessbeneficii1"
-                                            aria-expanded="false" aria-controls="#fitnessbeneficii1">
+                                            aria-expanded="false" aria-controls="fitnessbeneficii1">
                                             Beneficii fizice
                                         </button>
                                     </h4>
@@ -612,7 +613,7 @@
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#fitnessbeneficii2"
-                                            aria-expanded="false" aria-controls="#fitnessbeneficii2">
+                                            aria-expanded="false" aria-controls="fitnessbeneficii2">
                                             Beneficii mentale
                                         </button>
                                     </h4>
@@ -662,7 +663,7 @@
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#yogabeneficii1"
-                                            aria-expanded="false" aria-controls="#yogabeneficii1">
+                                            aria-expanded="false" aria-controls="yogabeneficii1">
                                             Beneficii fizice
                                         </button>
                                     </h4>
@@ -689,11 +690,12 @@
                                         </div>
                                     </div>
                                 </div>
+
                                 <div class="accordion-item">
                                     <h4 class="accordion-header">
                                         <button class="accordion-button collapsed" type="button"
                                             data-bs-toggle="collapse" data-bs-target="#yogabeneficii2"
-                                            aria-expanded="false" aria-controls="#yogabeneficii2">
+                                            aria-expanded="false" aria-controls="yogabeneficii2">
                                             Beneficii mentale
                                         </button>
                                     </h4>
@@ -723,10 +725,13 @@
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
+
                         </div>
                     </div>
                 </div>
+
             </div>
         </div>
 
