am corectat o greșeală și am centrat titlul

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <nav class="navbar navbar-expand-lg fixed-top">
                 <div class="container-fluid">
                     <button class="navbar-toggler border border-white" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#NavbarEnergym" aria-controls="#NavbarEnergym" aria-expanded="false"
+                        data-bs-target="#NavbarEnergym" aria-controls="NavbarEnergym" aria-expanded="false"
                         aria-label="Toggle navigation">
                         <img class="menu" src="poze_tema3/menu_bar.png"
                             alt="ilustrație simplă, cu contur galben, a unei haltere, element sugestiv pentru o sală de fitness">
@@ -260,8 +260,10 @@
                 </button>
             </div>
         </header>
-
-        <h1 id="Energym" class="text-center">Energym</h1>
+        
+        <div class="container text-center">
+        <h1 id="Energym">Energym</h1>
+        </div>
 
         <h2 id="Desprenoi">Despre noi</h2>
 
@@ -566,7 +568,7 @@
 
             <div class="row g-4">
                 <div class="col col-lg-6 col-md-6 col-12">
-                    
+
                     <div class="card">
                         <img src="poze_tema3/antrenament2.jpg" class="card-img-top"
                             alt="Două gantere albastre așezate pe o suprafață albă, și alte câteva echipamente pentru sală în fundal.">
