--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
         }
 
         h1 {
+            text-align: center;
             color: yellow;
             font-weight: bold;
             text-transform: uppercase;
@@ -261,9 +262,7 @@
             </div>
         </header>
         
-        <div class="container text-center">
         <h1 id="Energym">Energym</h1>
-        </div>
 
         <h2 id="Desprenoi">Despre noi</h2>
 
