update titlu si background

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
             background-position: center;
             background-size: cover;
             background-attachment: fixed;
-            height: 100%;
+            text-size-adjust: 100%;
+            text-align: match-parent;
             color: rgb(255, 255, 255);
 
         }
