încă un experiment pe fundal

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
         }
 
+        @media (max-width: 768px) {
+            body {
+                background-attachment: fixed;
+            }
+        }
+
         body::before {
             position: absolute;
             content: "";
