--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             position: relative;
             background-image: url(poze_tema3/fundalenergym.jpg);
             background-position: center;
-            background-attachment: fixed;
+            background-attachment: scroll;
             color: rgb(255, 255, 255);
 
         }
@@ -109,6 +109,7 @@
 
         .abonament {
             background-color: yellow;
+            border: 1px solid rgb(0, 0, 0);
             color: black;
         }
 
