--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             position: relative;
             background-image: url(poze_tema3/fundalenergym.jpg);
             background-position: center;
+            background-repeat: no-repeat;
             background-attachment: scroll;
             color: rgb(255, 255, 255);
 
