--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         @media (max-width: 768px) {
             body {
-                background-attachment: scroll;
+                background-attachment: fixed;
             }
         }
 
