am încercat să centrez textul pe toate 3 tipuri de dispozitive

--- a/index.html
+++ b/index.html
@@ -90,7 +90,6 @@
         }
 
         h1 {
-            text-align: center;
             color: yellow;
             font-weight: bold;
             text-transform: uppercase;
@@ -279,7 +278,7 @@
             </div>
         </header>
         
-        <h1 id="Energym">Energym</h1>
+        <h1 id="Energym" class="text-center text-md-center text-lg-center">Energym</h1>
 
         <h2 id="Desprenoi">Despre noi</h2>
 
