--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
             color: yellow;
             font-weight: bold;
             text-transform: uppercase;
+            font-size: 300%;
             margin: 3rem;
         }
 
