--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 
         }
 
-        @media (min-width: 576px) and (max-width: 767.98px) {
+        @media (min-width: 1200px) {
             body {
-                background-image: url(poze_tema3/bg_mic.jpg);
+                background-image: url(poze_tema3/bg_mare.jpg);
             }
         }
 
-        @media (min-width: 768px) and (max-width: 991.98px) {
+        @media (max-width: 1199px) and (min-width: 767px) {
             body {
                 background-image: url(poze_tema3/bg_mediu.jpg);
             }
         }
 
-        @media (min-width: 992px) and (max-width: 1199.98px) {
+        @media (max-width: 768px) {
             body {
-                background-image: url(poze_tema3/bg_mare.jpg);
+                background-image: url(poze_tema3/bg_mic.jpg);
             }
         }
 
