Am ales alte dimensiuni

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
             }
         }
 
-        @media (max-width: 1199px) and (min-width: 767px) {
+        @media (min-width: 768px) {
             body {
                 background-image: url(poze_tema3/bg_mediu.jpg);
             }
         }
 
-        @media (max-width: 768px) {
+        @media (min-width: 992px) {
             body {
                 background-image: url(poze_tema3/bg_mic.jpg);
             }
