Am șters celelalte poze si am făcut o parte de text galbenă

--- a/index.html
+++ b/index.html
@@ -17,30 +17,13 @@
 
     <style>
         body {
+            position: relative;
+            background-image: url(poze_tema3/fundalenergym.jpg);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
             color: rgb(255, 255, 255);
-
-        }
-
-        @media (min-width: 1200px) {
-            body {
-                background-image: url(poze_tema3/bg_mare.jpg);
-            }
-        }
-
-        @media (min-width: 768px) {
-            body {
-                background-image: url(poze_tema3/bg_mediu.jpg);
-            }
-        }
-
-        @media (min-width: 992px) {
-            body {
-                background-image: url(poze_tema3/bg_mic.jpg);
-            }
         }
 
         body::before {
@@ -472,9 +455,9 @@
                         <div class="card-body">
                             <h4 class="card-title">Luni, Miercuri și Vineri:</h4>
                             <ul class="card-text">
-                                <li>07:00 - 08:00: Yoga pentru Începători</li>
-                                <li>12:00 - 13:00: Pilates</li>
-                                <li>18:00 - 19:00: Antrenament Funcțional</li>
+                                <li><span class="yellow">07:00 - 08:00</span>: Yoga pentru Începători</li>
+                                <li><span class="yellow">12:00 - 13:00</span>: Pilates</li>
+                                <li><span class="yellow">18:00 - 19:00</span>: Antrenament Funcțional</li>
                             </ul>
                         </div>
                     </div>
@@ -485,9 +468,9 @@
                         <div class="card-body">
                             <h4 class="card-title">Marți și Joi:</h4>
                             <ul class="card-text">
-                                <li>08:00 - 09:00: HIIT</li>
-                                <li>12:00 - 13:00: Cardio și Forță</li>
-                                <li>19:00 - 20:00: Yoga Vinyasa</li>
+                                <li><span class="yellow">08:00 - 09:00</span>: HIIT</li>
+                                <li><span class="yellow">12:00 - 13:00</span>: Cardio și Forță</li>
+                                <li><span class="yellow">19:00 - 20:00</span>: Yoga Vinyasa</li>
                             </ul>
                         </div>
                     </div>
@@ -497,9 +480,9 @@
                         <div class="card-body">
                             <h4 class="card-title">Sâmbătă și Duminică</h4>
                             <ul class="card-text">
-                                <li>10:00 - 11:00: Yoga Yin</li>
-                                <li>11:00 - 12:00: Zumba</li>
-                                <li>12:00 - 13:00: Relaxare și Meditație</li>
+                                <li><span class="yellow">10:00 - 11:00</span>: Yoga Yin</li>
+                                <li><span class="yellow">11:00 - 12:00</span>: Zumba</li>
+                                <li><span class="yellow">12:00 - 13:00</span>: Relaxare și Meditație</li>
                             </ul>
                         </div>
                     </div>
