--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
+            width: 100%;
+            height: 100%;
             color: rgb(255, 255, 255);
         }
 
