--- a/index.html
+++ b/index.html
@@ -17,28 +17,16 @@
 
     <style>
         body {
-            position: relative;
-            background-image: url(poze_tema3/fundalenergym.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-            background-attachment: fixed;
-            width: 100%;
-            height: 100%;
             color: rgb(255, 255, 255);
         }
 
-        body::before {
-            position: absolute;
-            content: "";
+        .exemplu-background-image {
+            background-image: url('poze_tema3/bg_mare.jpg');
             width: 100%;
             height: 100%;
-            background-color: rgba(6, 6, 14, 0.532);
-            z-index: -1;
-        }
-
-        .content {
-            position: relative;
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
         }
 
         nav {
@@ -152,7 +140,7 @@
 </head>
 
 <body>
-
+<div class="exemplu-background-image">
 <div class="content">
 
         <header>
@@ -852,7 +840,7 @@
 
     </footer>
 </div>
-
+</div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
