--- a/index.html
+++ b/index.html
@@ -16,17 +16,29 @@
 
 
     <style>
-        body {
+       body {
+            position: relative;
+            background-image: url('poze_tema3/fundalenergym.jpg');
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            width: 100%;
+            height: 100%;
             color: rgb(255, 255, 255);
         }
 
-        .exemplu-background-image {
-            background-image: url('poze_tema3/bg_mare.jpg');
+        body::before {
+            position: absolute;
+            content: "";
             width: 100%;
             height: 100%;
-            background-size: cover;
-            background-position: center;
-            background-attachment: fixed;
+            background-color: rgba(6, 6, 14, 0.532);
+            z-index: -1;
+        }
+
+        .content {
+            position: relative;
         }
 
         nav {
@@ -140,7 +152,7 @@
 </head>
 
 <body>
-<div class="exemplu-background-image">
+<div class="background-image">
 <div class="content">
 
         <header>
@@ -841,6 +853,7 @@
     </footer>
 </div>
 </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
